deploy: b3b2de1965ed5706fd942cbeb6745f22bce34b6d

--- a/getting_started/user_guide.html
+++ b/getting_started/user_guide.html
@@ -619,10 +619,10 @@ following command.</li>
 </div></blockquote>
 </div></blockquote>
 <ol class="arabic simple" start="2">
-<li>In VSCode, press <strong>F1</strong> and run the <code class="docutils literal notranslate"><span class="pre">Remote-SSH:</span> <span class="pre">Open</span> <span class="pre">SSH</span> <span class="pre">Host...</span></code> command. Enter the same
-<code class="docutils literal notranslate"><span class="pre">username&#64;hostname.local</span></code> combination you used when opening the SSH connection between your
-remote computer and the LoCoBot like <code class="docutils literal notranslate"><span class="pre">locobot&#64;locobot.local</span></code>. If prompted, enter the password
-<code class="docutils literal notranslate"><span class="pre">locobot</span></code>.</li>
+<li>In VSCode, press <strong>F1</strong> and run the <code class="docutils literal notranslate"><span class="pre">Remote-SSH:</span> <span class="pre">Open</span> <span class="pre">SSH</span> <span class="pre">Host...</span></code> command and select the
+<code class="docutils literal notranslate"><span class="pre">Add</span> <span class="pre">New</span> <span class="pre">SSH</span> <span class="pre">Host</span></code> option. Enter the same <code class="docutils literal notranslate"><span class="pre">username&#64;hostname.local</span></code> combination you used
+when opening the SSH connection between your remote computer and the LoCoBot like <code class="docutils literal notranslate"><span class="pre">ssh</span>
+<span class="pre">locobot&#64;locobot.local</span></code>. If prompted, enter the password <code class="docutils literal notranslate"><span class="pre">locobot</span></code>.</li>
 <li>Once connected, use <strong>File &gt; Open Folder</strong>, and select the directory you wish to operate in,
 i.e. the <code class="docutils literal notranslate"><span class="pre">~/interbotix_ws</span></code> directory if using the ROS Interface.</li>
 <li>Your instance of VSCode is now attached to the LoCoBot and is open to your development
