deploy: c65d91ac8cf2ade4458a884f7c0774b4dd748b36

--- a/ros2_packages/joystick_control.html
+++ b/ros2_packages/joystick_control.html
@@ -230,7 +230,7 @@ run-time, look at the table below:</p>
 <tr class="row-even"><td>controller</td>
 <td>type of controller.</td>
 <td><code class="docutils literal notranslate"><span class="pre">ps4</span></code></td>
-<td><code class="docutils literal notranslate"><span class="pre">ps4</span></code>, <code class="docutils literal notranslate"><span class="pre">ps3</span></code>, <code class="docutils literal notranslate"><span class="pre">xbox360</span></code></td>
+<td><code class="docutils literal notranslate"><span class="pre">ps4</span></code>, <code class="docutils literal notranslate"><span class="pre">ps3</span></code></td>
 </tr>
 <tr class="row-odd"><td>launch_driver</td>
 <td><code class="docutils literal notranslate"><span class="pre">true</span></code> if xslocobot_control should be launched - set to <code class="docutils literal notranslate"><span class="pre">false</span></code> if you would like to run your own version of this file separately.</td>
