deploy: b4c87b504bba5795080b1866671775ab2b3b5352

--- a/ros2_packages/joystick_control.html
+++ b/ros2_packages/joystick_control.html
@@ -149,7 +149,7 @@ messages are then published on the <code class="docutils literal notranslate"><s
 <code class="docutils literal notranslate"><span class="pre">/&lt;robot_name&gt;/commands/joy_processed</span></code> topic and publishing joint, gripper, and pan/tilt
 commands to the <strong>xs_sdk</strong> node; while the 'waist' joint is directly controlled via the PS3/PS4
 joystick, other buttons allow position-ik to be performed using all the arm joints. It also
-publishes velocity commands to the Kobuki base.</li>
+publishes velocity commands to the mobile base.</li>
 </ul>
 </div>
 <div class="section" id="usage">
