--- a/ros1_packages/joystick_control.html
+++ b/ros1_packages/joystick_control.html
@@ -127,7 +127,7 @@
 <p>This package can be used to control the movements of any rover in the Interbotix X-Series LoCoBot
 Family using a SONY PS3 or PS4 controller via Bluetooth. In this demo, the 'arm' (if equipped) and
 'pan/tilt' servos work in 'position' control mode, the gripper operates in 'PWM' mode, and the
-Kobuki base operates in 'velocity' control mode. Refer to the joystick button map below to see how
+mobile base operates in 'velocity' control mode. Refer to the joystick button map below to see how
 to operate the robot. Specifically, some of the joystick controls manipulate individual joints
 while others are used to perform 'inverse kinematics' on all the joints to get the end-effector of
 the robot (defined at 'ee_gripper_link') to move as if it's in Cartesian space. This is done using
@@ -152,7 +152,7 @@ messages are then published on the <code class="docutils literal notranslate"><s
 <code class="docutils literal notranslate"><span class="pre">/&lt;robot_name&gt;/commands/joy_processed</span></code> topic and publishing joint, gripper, and pan/tilt
 commands to the <strong>xs_sdk</strong> node; while the 'waist' joint is directly controlled via the PS3/PS4
 joystick, other buttons allow position-ik to be performed using all the arm joints. It also
-publishes velocity commands to the Kobuki base.</li>
+publishes velocity commands to the mobile base.</li>
 </ul>
 </div>
 <div class="section" id="usage">
