--- a/ros1_packages/locobot_control.html
+++ b/ros1_packages/locobot_control.html
@@ -122,7 +122,7 @@
 <p>This package contains the configuration and launch files necessary to easily start the various
 components of the X-Series LoCoBot platform. This includes launching the <strong>xs_sdk</strong> node
 responsible for driving the DYNAMIXEL motors on the robot, loading the URDF to the
-<code class="docutils literal notranslate"><span class="pre">robot_description</span></code> parameter, starting the Kobuki base, and activating the RealSense D435 camera
+<code class="docutils literal notranslate"><span class="pre">robot_description</span></code> parameter, starting the mobile base, and activating the RealSense D435 camera
 and RPLidar 2D laser scanner. Essentially, this package is what all 'downstream' ROS packages
 should reference to get the robot up and running.</p>
 </div>
