deploy: 085b674a72f0d708df93e178ac3235ad2366de35

--- a/ros1_packages/joystick_control.html
+++ b/ros1_packages/joystick_control.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/copybutton.css" type="text/css" />
+      <link rel="stylesheet" href="../_static/sphinx_collapse.css" type="text/css" />
       <link rel="stylesheet" href="../_static/tabs.css" type="text/css" />
       <link rel="stylesheet" href="../_static/tr_style.css" type="text/css" />
     <link rel="shortcut icon" href="../_static/favicon.ico"/>
@@ -205,7 +206,7 @@ run-time, look at the table below:</p>
 <td>$(arg robot_name)/odom</td>
 </tr>
 <tr class="row-even"><td>use_base</td>
-<td>if true, the Kobuki ROS nodes are launched</td>
+<td>if true, the base ROS nodes are launched</td>
 <td>true</td>
 </tr>
 <tr class="row-odd"><td>use_lidar</td>
@@ -255,13 +256,13 @@ below:</p>
 </thead>
 <tbody valign="top">
 <tr class="row-even"><td>Left</td>
-<td>stick Up/Down	drive the Kobuki base forward/backward between 0.7 to -0.7 m/s</td>
+<td>stick Up/Down	drive the base forward/backward between 0.7 to -0.7 m/s</td>
 </tr>
 <tr class="row-odd"><td>R2</td>
-<td>rotate the Kobuki base clockwise between 0 and -3.14 rad/s</td>
+<td>rotate the base clockwise between 0 and -3.14 rad/s</td>
 </tr>
 <tr class="row-even"><td>L2</td>
-<td>rotate the Kobuki base counterclockwise between 0 and 3.14 rad/s</td>
+<td>rotate the base counterclockwise between 0 and 3.14 rad/s</td>
 </tr>
 <tr class="row-odd"><td>SELECT/SHARE</td>
 <td>Reset the odometry of the base to an 'x',  'y', and 'theta' of 0 (the base chirps as well)</td>
