--- a/ros1_packages/landmark_based_navigation.html
+++ b/ros1_packages/landmark_based_navigation.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/copybutton.css" type="text/css" />
+      <link rel="stylesheet" href="../_static/sphinx_collapse.css" type="text/css" />
       <link rel="stylesheet" href="../_static/tabs.css" type="text/css" />
       <link rel="stylesheet" href="../_static/tr_style.css" type="text/css" />
     <link rel="shortcut icon" href="../_static/favicon.ico"/>
@@ -156,7 +157,7 @@ publish their location in the map during mapping</li>
 <p>Other packages required for landmark_nav include <cite>move_base</cite> and <cite>interbotix_perception_modules</cite>:</p>
 <ul class="simple">
 <li><strong>move_base</strong> - performs path planning to the selected landmark goal and will attempt to reach
-said goal by sending velocity commands to the Kobuki base</li>
+said goal by sending velocity commands to the base</li>
 <li><strong>static_transform_pub</strong> - publishes any transform it receives to the static transform tree;
 used to build a tf tree that describes landmark poses relative to the map</li>
 </ul>
