--- a/ros1_packages/python_demos.html
+++ b/ros1_packages/python_demos.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/copybutton.css" type="text/css" />
+      <link rel="stylesheet" href="../_static/sphinx_collapse.css" type="text/css" />
       <link rel="stylesheet" href="../_static/tabs.css" type="text/css" />
       <link rel="stylesheet" href="../_static/tr_style.css" type="text/css" />
     <link rel="shortcut icon" href="../_static/favicon.ico"/>
@@ -253,7 +254,7 @@ perception, or arm manipulation, you can start the launch file accordingly.</p>
 <td>$(arg robot_name)/base_footprint</td>
 </tr>
 <tr class="row-even"><td>use_base</td>
-<td>if true, the Kobuki ROS nodes are launched</td>
+<td>if true, the base ROS nodes are launched</td>
 <td>$(arg use_nav)</td>
 </tr>
 <tr class="row-odd"><td>use_lidar</td>
