deploy: bc71dfa90f171ee74ffff6e809d10b431a142101

--- a/getting_started/create3_configuration.html
+++ b/getting_started/create3_configuration.html
@@ -234,11 +234,11 @@ actions, and parameters will be, i.e. the <code class="docutils literal notransl
 Documentation</a>.</td>
 </tr>
 <tr class="row-odd"><td>Enable Fast DDS discovery server?</td>
-<td>✔️</td>
+<td><code class="docutils literal notranslate"><span class="pre">✔️</span></code></td>
 <td>Enables the Base to search for a Fast DDS discovery server.</td>
 </tr>
 <tr class="row-even"><td>Address and port of Fast DDS discovery server</td>
-<td>192.168.186.3:11811</td>
+<td><code class="docutils literal notranslate"><span class="pre">192.168.186.3:11811</span></code></td>
 <td>Tells Fast DDS the address and port of the Fast DDS discovery server. This is the
 IP address of the LoCoBot computer's Ethernet interface.</td>
 </tr>
