deploy: 5e588241ddddf4865f61daf8a9caef8c36c9550c

--- a/ros2_packages/locobot_control.html
+++ b/ros2_packages/locobot_control.html
@@ -254,7 +254,7 @@ terminal on your remote and run:</p>
 <td><code class="docutils literal notranslate"><span class="pre">true</span></code>, <code class="docutils literal notranslate"><span class="pre">false</span></code></td>
 </tr>
 <tr class="row-even"><td>use_base_odom_tf</td>
-<td>if <code class="docutils literal notranslate"><span class="pre">true</span></code>, the odom TF from the base will be published. This only works on the Create 3 base.</td>
+<td>if <code class="docutils literal notranslate"><span class="pre">true</span></code>, the odom TF from the base will be published. This only works on the Create® 3 base.</td>
 <td><code class="docutils literal notranslate"><span class="pre">true</span></code></td>
 <td><code class="docutils literal notranslate"><span class="pre">true</span></code>, <code class="docutils literal notranslate"><span class="pre">false</span></code></td>
 </tr>
