deploy: ca223c8762e180be6616bf47a965c72b9b6a8cf0

--- a/ros_interface/ros2.html
+++ b/ros_interface/ros2.html
@@ -26,7 +26,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="ROS 2 Standard Software Setup" href="ros2/software_setup.html" />
-    <link rel="prev" title="ROS 1 Configurations" href="ros1/config.html" />
+    <link rel="prev" title="ROS 1 Quickstart Guide" href="ros1/quickstart.html" />
    
   <!-- Google Tag Manager (noscript) -->
   <noscript>
@@ -143,7 +143,7 @@ get familiar with some of the basic features of the X-Series LoCoBot packages.</
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="ros1/config.html" class="btn btn-neutral float-left" title="ROS 1 Configurations" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="ros1/quickstart.html" class="btn btn-neutral float-left" title="ROS 1 Quickstart Guide" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="ros2/software_setup.html" class="btn btn-neutral float-right" title="ROS 2 Standard Software Setup" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
