deploy: a0acf2b50ced596d30b7093d74bd6a9374b98a77

--- a/getting_started/hardware.html
+++ b/getting_started/hardware.html
@@ -130,8 +130,32 @@
 hardware.</p>
 <img alt="../_images/hardware_layout.png" class="align-center" src="../_images/hardware_layout.png" style="width: 70%;" />
 <ol class="arabic simple">
-<li>Grab the base of your LoCoBot, the second largest Allen key provided, three M5x12mm screws, and
-the three black extruded aluminum bars.</li>
+<li>If using the Create® 3 base version, the Ethernet cable from the its board must be plugged into the computer.
+Untape the cable from the base, feed it through the slot on the cover plate, through the rear of the robot, and plug it into the computer.</li>
+</ol>
+<div class="no-table docutils container">
+<table border="1" class="colwidths-given docutils align-default">
+<colgroup>
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+<col width="25%" />
+</colgroup>
+<tbody valign="top">
+<tr class="row-odd"><td><img alt="../_images/create3_ethernet_untape.png" class="first last" src="../_images/create3_ethernet_untape.png" style="width: 100%;" />
+</td>
+<td><img alt="../_images/create3_ethernet_through_base.png" class="first last" src="../_images/create3_ethernet_through_base.png" style="width: 100%;" />
+</td>
+<td><img alt="../_images/create3_ethernet_through_rear.png" class="first last" src="../_images/create3_ethernet_through_rear.png" style="width: 100%;" />
+</td>
+<td><img alt="../_images/create3_ethernet_nuc.png" class="first last" src="../_images/create3_ethernet_nuc.png" style="width: 100%;" />
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+<ol class="arabic simple">
+<li>Grab the base of your LoCoBot, the second largest Allen key provided, three M5x12mm screws, and the three black extruded aluminum bars.</li>
 </ol>
 <div class="no-table docutils container">
 <table border="1" class="colwidths-given docutils align-default">
@@ -156,8 +180,7 @@ the three black extruded aluminum bars.</li>
 </div>
 <ol class="arabic simple" start="2">
 <li>Find the three holes on the back of the base plate and begin screwing in the aluminum bars.
-Make sure to leave a bit of slack to allow for easy assembly of the sensor tower in the next
-step.</li>
+Make sure to leave a bit of slack to allow for easy assembly of the sensor tower in the next step.</li>
 </ol>
 <div class="no-table docutils container">
 <table border="1" class="colwidths-given docutils align-default">
@@ -190,8 +213,8 @@ step.</li>
 </ol>
 <img alt="../_images/placing_sensor_tower.png" class="align-center" src="../_images/placing_sensor_tower.png" style="width: 70%;" />
 <ol class="arabic simple" start="6">
-<li>Using three more M5x12mm screws, secure the sensor tower to the aluminum bars. Make sure to
-tighten the screws in the base as well.</li>
+<li>Using three more M5x12mm screws, secure the sensor tower to the aluminum bars.
+Make sure to tighten the screws in the base as well.</li>
 </ol>
 <div class="no-table docutils container">
 <table border="1" class="colwidths-given docutils align-default">
@@ -220,14 +243,13 @@ tighten the screws in the base as well.</li>
 </ol>
 <img alt="../_images/brackets.png" class="align-center" src="../_images/brackets.png" style="width: 70%;" />
 <ol class="arabic simple" start="9">
-<li>Run the cable down the front channel on the top right aluminum bar. Clip the cable to the front
-of the bar.</li>
+<li>Run the cable down the front channel on the top right aluminum bar.
+Clip the cable to the front of the bar.</li>
 </ol>
 <img alt="../_images/bracket_top_sensor_tower.png" class="align-center" src="../_images/bracket_top_sensor_tower.png" style="width: 70%;" />
 <ol class="arabic simple" start="10">
-<li>Continue running the cable down the back channel of the right aluminum bar. Clip the USB
-adapter to the middle of the bar and the rest of the cable to
-the bottom of the bar.</li>
+<li>Continue running the cable down the back channel of the right aluminum bar.
+Clip the USB adapter to the middle of the bar and the rest of the cable to the bottom of the bar.</li>
 </ol>
 <img alt="../_images/wire_down_bar.png" class="align-center" src="../_images/wire_down_bar.png" style="width: 70%;" />
 <ol class="arabic simple" start="11">
@@ -239,8 +261,7 @@ the bottom of the bar.</li>
 </ol>
 <img alt="../_images/nuc_cables.png" class="align-center" src="../_images/nuc_cables.png" style="width: 70%;" />
 <ol class="arabic simple" start="13">
-<li>Wrap the lidar's thinner power cable around the back of the LoCoBot's base and insert it into
-the 2.1A port on the left side of the battery.</li>
+<li>Wrap the lidar's thinner power cable around the back of the LoCoBot's base and insert it into the 2.1A port on the left side of the battery.</li>
 </ol>
 <div class="no-table docutils container">
 <table border="1" class="colwidths-given docutils align-default">
@@ -266,8 +287,7 @@ the 2.1A port on the left side of the battery.</li>
 </ol>
 <img alt="../_images/leave_slack_for_camera_movement.png" class="align-center" src="../_images/leave_slack_for_camera_movement.png" style="width: 70%;" />
 <ol class="arabic simple" start="16">
-<li>The braided servo cable goes down the inside channel and down through the inside tower base
-cutout.</li>
+<li>The braided servo cable goes down the inside channel and down through the inside tower base cutout.</li>
 </ol>
 <img alt="../_images/run_braided_servo_cable.png" class="align-center" src="../_images/run_braided_servo_cable.png" style="width: 70%;" />
 <ol class="arabic simple" start="17">
@@ -307,8 +327,7 @@ cutout.</li>
 </table>
 </div>
 <ol class="arabic simple" start="19">
-<li>Take the braided servo cable and insert it into any of the open ports on the power hub located
-on the left side of the LoCoBot.</li>
+<li>Take the braided servo cable and insert it into any of the open ports on the power hub located on the left side of the LoCoBot.</li>
 </ol>
 <img alt="../_images/servo_cable_in_power_hub.png" class="align-center" src="../_images/servo_cable_in_power_hub.png" style="width: 70%;" />
 <ol class="arabic simple" start="20">
@@ -336,8 +355,8 @@ on the left side of the LoCoBot.</li>
 <iframe allowfullscreen="true" class="first last" src="https://www.youtube.com/embed/j9iMogflXLA" style="border: 0; height: 345px; width: 560px">
 </iframe></div></td>
 </tr>
-<tr class="row-even"><td><strong>Kobuki Version</strong></td>
-<td><strong>Create® 3 Version</strong></td>
+<tr class="row-even"><td><strong>Kobuki Base Version</strong></td>
+<td><strong>Create® 3 Base Version</strong></td>
 </tr>
 </tbody>
 </table>
