deploy: f1562393404a1040a8ea1ddbdec8473956f20ac3

--- a/ros_interface/ros1/software_setup.html
+++ b/ros_interface/ros1/software_setup.html
@@ -28,16 +28,13 @@
     <link rel="next" title="ROS 1 Quickstart Guide" href="quickstart.html" />
     <link rel="prev" title="ROS 1 Interface" href="../ros1.html" />
    
-  <!-- Google Tag Manager (noscript) -->
-  <noscript>
-    <iframe
-      src="https://www.googletagmanager.com/ns.html?id=GTM-PZQLS2V"
-      height="0"
-      width="0"
-      style="display:none;visibility:hidden">
-    </iframe>
-  </noscript>
-  <!-- End Google Tag Manager (noscript) -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "nglikgkapv");
+  </script>
 
 </head>
 
@@ -245,7 +242,7 @@ it will come pre-installed with all required software already on it and you shou
 to run the software installation yourself.</p>
 </div>
 <div class="sphinx_collapse docutils container">
-<input class="sphinx_collapse__input" id="a00612a1-cb9f-45fc-bcdc-6e72095d904d" name="a00612a1-cb9f-45fc-bcdc-6e72095d904d" type="checkbox"><label class="sphinx_collapse__label" for="a00612a1-cb9f-45fc-bcdc-6e72095d904d"><i class="sphinx_collapse__icon"></i>Click here to reveal installation steps, acknowledging the note above.</label><div class="sphinx_collapse__content docutils container">
+<input class="sphinx_collapse__input" id="6dbc085b-c270-48a5-86b1-0c5e279f8386" name="6dbc085b-c270-48a5-86b1-0c5e279f8386" type="checkbox"><label class="sphinx_collapse__label" for="6dbc085b-c270-48a5-86b1-0c5e279f8386"><i class="sphinx_collapse__icon"></i>Click here to reveal installation steps, acknowledging the note above.</label><div class="sphinx_collapse__content docutils container">
 <p>After powering on the NUC, a login screen should appear with <code class="docutils literal notranslate"><span class="pre">locobot</span></code> as the user name.
 Conveniently, the password is the same as the user name so type <code class="docutils literal notranslate"><span class="pre">locobot</span></code> and hit
 <kbd class="kbd docutils literal notranslate">Enter</kbd>. Next, update the computer by performing the following steps.</p>
