--- a/ros_interface/ros2/software_setup.html
+++ b/ros_interface/ros2/software_setup.html
@@ -28,16 +28,13 @@
     <link rel="next" title="ROS 2 Quickstart Guide" href="quickstart.html" />
     <link rel="prev" title="ROS 2 Interface" href="../ros2.html" />
    
-  <!-- Google Tag Manager (noscript) -->
-  <noscript>
-    <iframe
-      src="https://www.googletagmanager.com/ns.html?id=GTM-PZQLS2V"
-      height="0"
-      width="0"
-      style="display:none;visibility:hidden">
-    </iframe>
-  </noscript>
-  <!-- End Google Tag Manager (noscript) -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "nglikgkapv");
+  </script>
 
 </head>
 
@@ -238,7 +235,7 @@ it will come pre-installed with all required software already on it and you shou
 to run the software installation yourself.</p>
 </div>
 <div class="sphinx_collapse docutils container">
-<input class="sphinx_collapse__input" id="7adff480-75eb-4de1-8e72-ca7907fa8aad" name="7adff480-75eb-4de1-8e72-ca7907fa8aad" type="checkbox"><label class="sphinx_collapse__label" for="7adff480-75eb-4de1-8e72-ca7907fa8aad"><i class="sphinx_collapse__icon"></i>Click here to reveal installation steps, acknowledging the note above.</label><div class="sphinx_collapse__content docutils container">
+<input class="sphinx_collapse__input" id="b26ab6d7-f5ab-4401-a54c-26f735cfe3b0" name="b26ab6d7-f5ab-4401-a54c-26f735cfe3b0" type="checkbox"><label class="sphinx_collapse__label" for="b26ab6d7-f5ab-4401-a54c-26f735cfe3b0"><i class="sphinx_collapse__icon"></i>Click here to reveal installation steps, acknowledging the note above.</label><div class="sphinx_collapse__content docutils container">
 <p>After powering on the NUC via the steps in the previous section, a login screen should appear
 with <code class="docutils literal notranslate"><span class="pre">locobot</span></code> as the user name. Conveniently, the password is the same as the user name so
 type <code class="docutils literal notranslate"><span class="pre">locobot</span></code> and hit <kbd class="kbd docutils literal notranslate">Enter</kbd>. Next, update the computer by performing the following
